<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewLearning"
    android:columnCount="2"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_column="0"
        android:layout_row="1"
        />


    <Button
    android:text="@string/hot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonHot"
    android:layout_column="1"
    android:layout_row="1"/>

    <CheckBox
    android:text="@string/milk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_row="2"
    android:checked="true" />


    <CheckBox
        android:text="@string/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:checked="true"
        />

    <CheckBox
        android:text="@string/lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"/>




    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:inputType="textPersonName"-->
        <!--android:gravity="top"-->
        <!--android:id="@+id/editText"-->
        <!--android:hint="Message"-->
        <!--android:layout_weight="1"/>-->

    <!--<Button-->
        <!--android:text="Button"-->
        <!--android:gravity="fill"-->
        <!--android:layout_gravity="end"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/button" />-->

</GridLayout>
